# RetroFPSEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
asset/: imgui.ini
asset/shader/: ColoredPixelShader.hlsl  ColoredVertexShader.hlsl  TexturedPixelShader.hlsl  TexturedVertexShader.hlsl
src/: Application.cpp  Application.h  Common.h  Config.h  Log.cpp  Log.h  main.cpp
src/game/: Game.cpp  Game.h
src/imgui/: ImguiResource.cpp  ImguiResource.h  ToolRenderer.cpp  ToolRenderer.h
src/platform/: GameWindow.cpp  GameWindow.h  Input.cpp  Input.h  SDLSystemResource.cpp  SDLSystemResource.h  SDLWindowResource.cpp  SDLWindowResource.h  SDLWindowWrapper.cpp  SDLWindowWrapper.h
src/renderer/: Adapter.cpp  Adapter.h  Framebuffer.cpp  Framebuffer.h  MeshBuilder.h  MeshHolder.cpp  MeshHolder.h  MeshLoader.h  RenderContext.cpp  RenderContext.h  RenderDebug.cpp  RenderDebug.h  RenderGlobalBuffer.cpp  RenderGlobalBuffer.h  Renderer.cpp  Renderer.h  RendererCommon.h  ShaderHolder.cpp  ShaderHolder.h  TextureHolder.cpp  TextureHolder.h
src/scene/: Scene.cpp  Scene.h
src/util/: Mat4Ext.h  MathExt.h  RandomExt.h  StringExt.h  Vec3Ext.h
